--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -818,8 +818,8 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content"> I am primarily holding two exercise sessions per week.
-                    Additionally, I answer student questions and explain lecture content in an online forum.
+                  <p class="item-content"> Taught two recitations per week for 40 students.
+                    Additionally, I answered student questions and explained lecture content in an online forum.
                   </p>
                 </div>
                 <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
@@ -832,17 +832,14 @@
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                    Feb 2020 - Present
+                    Feb 2020 - Nov 2021
                     <a fxHide.xs>
                       <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
                       Augsburg, Germany
                     </a>
                   </p>
                   <p class="item-content">
-                    I am teaching linear algebra, analysis, and statistics in small group lessons and sometimes
-                    individual
-                    lessons.
-                    The activity also involves a lot of student mediation and counseling to ensure student wellbeing.
+                    A german private education institution where I taught undergraduate level analysis, linear algebra, and statistics for 4 hours per week.
                   </p>
                 </div>
                 <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
@@ -863,13 +860,10 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content"> I am primarily holding office hours and giving lessons to subgroups of all
+                  <p class="item-content"> I held weekly office hours and gave lessons to subgroups of all
                     students.
-                    Additionally, I create exercises and learning material like jupyter notebooks or explanatory
-                    illustrations.
-                    Through the online teaching tool Piazza I explain lecture content and answer questions. You can find
-                    the
-                    course
+                    Additionally, I created exercises and learning material like jupyter notebooks. You can find
+                    the course
                     <a href="https://niessner.github.io/I2DL/" target="_blank" class="link-style-green">here</a>.
                   </p>
                 </div>
@@ -891,16 +885,12 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content">In the beginning, I implemented and evaluated different methods for regression
-                    on
-                    time-series data like SARIMA, ARIMAX, and LSTMs.
-                    After that project was done I worked on causal inference for train traffic data using structure
-                    learning
-                    for bayesian inference and I evaluated the approaches with data from Anylogic simulations.</p>
+                  <p class="item-content">10h workweek. I implemented and evaluated different methods for time series analysis like SARIMA, ARIMAX, and LSTMs for the Bundeswehr's supply chain management.
+                    After that project was done I worked on causal inference for train traffic data.</p>
                 </div>
                 <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
-                  <a class="item-title">Dual Study Program</a>
+                  <a class="item-title">Working Student</a>
                   <div fxLayout="row">
                     <h3>
                       <a class="item-subtitle link-style-black" href="https://www.allianzdeutschland.de/"
@@ -915,10 +905,9 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content">I mainly worked in an agile Web-Development team where I maintained digital
-                    infrastructure and wrote code for a customer management application. I learned a lot about software
-                    engineering, best coding practices, and teamwork. In a side project, I designed and developed an app
-                    for organizing large software releases together with five other students.
+                  <p class="item-content">38h workweek during my bachelor's, which I completed in 2 years instead of the usual 3. <br>
+                    Web-development and digital infrastructure maintenance in an agile development team, technical training in computer science.<br>
+                    Developed a currently used app for organizing large software releases (in a team of students).
                 </div>
               </div>
             </div>
@@ -971,7 +960,7 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content">This project was part of a course. We used graph representations of robots in
+                  <p class="item-content">We used graph representations of robots in
                     reinforcement learning for locomotion problems where the robot has to learn to walk.
                     The idea is that a policy learned by a GNN that captures the structure of the robot will generalize
                     better and enable things like zero-shot transfer to a robot with a different geometry.
@@ -1005,14 +994,11 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content">My thesis was my first practical introduction to machine learning.
-                    I trained a Variational Autoencoder on remote sensing images and visualized the latent space in
+                  <p class="item-content">
+                    Trained a Variational Autoencoder on remote sensing images and visualized the latent space in
                     various
                     ways.
-                    Bishop's "Pattern Recognition And Machine Learning" basically saved me and was my main source for
-                    learning. It taught me the basics I needed from what neural networks, entropy, or convolutions even
-                    are
-                    to variational inference and latent variable models. Check out my
+                    Bishop's "Pattern Recognition And Machine Learning" was my main source of information. Check out my
                     <a href="/assets/bachelor_thesis.pdf" target="_blank" class="link-style-green">thesis
                       <fa-icon class="link-icon-style-green" [icon]="paper"></fa-icon>
                     </a> or have a look at the
@@ -1039,10 +1025,9 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content">I started by investigating the theory on different graph centrality measures
-                    in the context of computer networks. In the end, what came out of the project is a neat tool
-                    with a web interface where you can upload graphs and calculate the centralities for the desired
-                    measure. You can check it out on
+                  <p class="item-content">Investigated the theory of different graph centrality measures
+                    in the context of computer networks. Implemented graph centrality measures in a tool
+                    with a web interface where you can upload graphs and calculate the centralities. You can check it out on
                     <a href="https://github.com/HannesStark/dependencyNodeRanking" target="_blank"
                        class="link-style-green">GitHub
                       <fa-icon class="link-icon-style-green" [icon]="github"></fa-icon>
@@ -1151,7 +1136,7 @@
                       Remote
                     </a>
                   </p>
-                  <p class="item-content">Reviewing four graph representation learning and time series analysis papers.
+                  <p class="item-content">Reviewed four graph representation learning and time series analysis papers.
                   </p>
                 </div>
                 <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
