add mlog workshop

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1121,6 +1121,26 @@
               <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <a class="item-title">Co-organizer of ML o nGraphs workshop @ WSDM 2022</a>
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black" href="https://mlog-workshop.github.io/"
+                         target="_blank">
+                        2022 Machine Learning on Graphs Workshop</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    Dec 2021 - Feb 2022
+                    <a fxHide.xs>
+                      <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                      Remote
+                    </a>
+                  </p>
+                  <p class="item-content">Publicity Chair: advertising and running the workshop's <a href="https://twitter.com/MLoG_Workshop" target="_blank" class="link-style-green">Twitter account</a>
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <a class="item-title">Reviewer for ML4H 2021 Symposium</a>
                   <div fxLayout="row">
                     <h3>
