--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1121,7 +1121,8 @@
               <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
-                  <a class="item-title">Co-organizer of ML o nGraphs workshop @ WSDM 2022</a>
+                  <a class="item-title">Co-organizer of ML on dm
+                    Graphs workshop @ WSDM 2022</a>
                   <div fxLayout="row">
                     <h3>
                       <a class="item-subtitle link-style-black" href="https://mlog-workshop.github.io/"
