--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -134,59 +134,62 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black"
-                   href="https://physical-reasoning.github.io/assets/pdf/papers/06.pdf"
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.06935"
                    target="_blank">
-                  Learning Graph Search Heuristics (2021)
+                  Neural Bellman-Ford Networks: A General Graph Neural Network Framework for Link Prediction (2021)
                 </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                28th of December 2021
+                4th of January 2022
               </div>
               <div>
                 <a>
                   <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Michal Pándy, Rex Ying, Gabriele Corso, Petar Veličković, Jure Leskovec, Pietro Liò
+                  Zhaocheng Zhu, Zuobai Zhang, Louis-Pascal Xhonneux, Jian Tang
                 </a>
               </div>
             </div>
             <div>
-              <iframe ngClass.gt-sm="float-right" [src]='safeURLGraphSearch' allowfullscreen></iframe>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLNBFNets' allowfullscreen></iframe>
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
-                Michal's <a class="item-subtitle link-style-black" href="https://youtu.be/FpXIGTFD8Qs"
-                            target="_blank">slides </a> should be coming soon! (46 participants)
+                Zhaocheng's <a class="item-subtitle link-style-black"
+                               href="https://hannes-stark.com/assets/NBFNetLoGaG.pdf"
+                               target="_blank">slides </a>. (77 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
-                First author of the paper <a class="item-subtitle link-style-black"
-                                             href="https://mpmisko.github.io/"
-                                             target="_blank">Michal Pándy</a> who is an incoming ML Engineer at Waymo.
-                He
-                will join Prof. Shimon Whiteson 's team to work on self-driving cars. He did his master's at the
-                University of Cambridge and is currently a research intern at Google Research.
+                First author <a class="item-subtitle link-style-black"
+                                href="https://kiddozhu.github.io/"
+                                target="_blank">Zhaocheng Zhu</a>, who is a third-year Ph.D.
+                candidate at Mila - Quebec AI Institute, University of Montreal, advised by Prof. Jian Tang. He works on
+                graph representation learning, machine learning systems, and drug discovery.
               </p>
               <p class="no-margin">
                 <a class="slight-bold">Abstract:</a>
-                Searching for a path between two nodes in a graph is one of the most well-studied and fundamental
-                problems
-                in computer science. In numerous domains such as robotics, AI, or biology, practitioners develop search
-                heuristics to accelerate their pathfinding algorithms. However, it is a laborious and complex process to
-                hand-design heuristics based on the problem and the structure of a given use case. Here we present PHIL
-                (Path Heuristic with Imitation Learning), a novel neural architecture and a training algorithm for
-                discovering graph search and navigation heuristics from data by leveraging recent advances in imitation
-                learning and graph representation learning. At training time, we aggregate datasets of search
-                trajectories
-                and ground-truth shortest path distances, which we use to train a specialized graph neural network-based
-                heuristic function using backpropagation through steps of the pathfinding process. Our heuristic
-                function
-                learns graph embeddings useful for inferring node distances, runs in constant time independent of graph
-                sizes, and can be easily incorporated in an algorithm such as A* at test time. Experiments show that
-                PHIL
-                reduces the number of explored nodes compared to state-of-the-art methods on benchmark datasets by 40.8%
-                on average and allows for fast planning in time-critical robotics domains.
+                Link prediction is a very fundamental task on graphs. Inspired by traditional path-based methods, in
+                this
+                paper we propose a general and flexible representation learning framework based on paths for link
+                prediction. Specifically, we define the representation of a pair of nodes as the generalized sum of all
+                path representations, with each path representation as the generalized product of the edge
+                representations
+                in the path. Motivated by the Bellman-Ford algorithm for solving the shortest path problem, we show that
+                the proposed path formulation can be efficiently solved by the generalized Bellman-Ford algorithm. To
+                further improve the capacity of the path formulation, we propose the Neural Bellman-Ford Network
+                (NBFNet),
+                a general graph neural network framework that solves the path formulation with learned operators in the
+                generalized Bellman-Ford algorithm. The NBFNet parameterizes the generalized Bellman-Ford algorithm with
+                3
+                neural components, namely INDICATOR, MESSAGE and AGGREGATE functions, which corresponds to the boundary
+                condition, multiplication operator, and summation operator respectively. The NBFNet is very general,
+                covers many traditional path-based methods, and can be applied to both homogeneous graphs and
+                multi-relational graphs (e.g., knowledge graphs) in both transductive and inductive settings.
+                Experiments
+                on both homogeneous graphs and knowledge graphs show that the proposed NBFNet outperforms existing
+                methods
+                by a large margin in both transductive and inductive settings, achieving new state-of-the-art results.
               </p>
             </div>
           </div>
@@ -209,7 +212,6 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
-
 
 
           <div class="item" fxLayout="column">
@@ -514,37 +516,47 @@
                 </a>
               </div>
             </div>
-            <p class="paragraph">
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLNBFNets' allowfullscreen></iframe>
+              <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
-                Zhaocheng's <a class="item-subtitle link-style-black" href="https://hannes-stark.com/assets/NBFNetLoGaG.pdf"
-                            target="_blank">slides </a>. (77 participants)
+                Zhaocheng's <a class="item-subtitle link-style-black"
+                               href="https://hannes-stark.com/assets/NBFNetLoGaG.pdf"
+                               target="_blank">slides </a>. (77 participants)
               </p>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              First author <a class="item-subtitle link-style-black"
-                              href="https://kiddozhu.github.io/"
-                              target="_blank">Zhaocheng Zhu</a>, who is a third-year Ph.D.
-              candidate at Mila - Quebec AI Institute, University of Montreal, advised by Prof. Jian Tang. He works on
-              graph representation learning, machine learning systems, and drug discovery.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Link prediction is a very fundamental task on graphs. Inspired by traditional path-based methods, in this
-              paper we propose a general and flexible representation learning framework based on paths for link
-              prediction. Specifically, we define the representation of a pair of nodes as the generalized sum of all
-              path representations, with each path representation as the generalized product of the edge representations
-              in the path. Motivated by the Bellman-Ford algorithm for solving the shortest path problem, we show that
-              the proposed path formulation can be efficiently solved by the generalized Bellman-Ford algorithm. To
-              further improve the capacity of the path formulation, we propose the Neural Bellman-Ford Network (NBFNet),
-              a general graph neural network framework that solves the path formulation with learned operators in the
-              generalized Bellman-Ford algorithm. The NBFNet parameterizes the generalized Bellman-Ford algorithm with 3
-              neural components, namely INDICATOR, MESSAGE and AGGREGATE functions, which corresponds to the boundary
-              condition, multiplication operator, and summation operator respectively. The NBFNet is very general,
-              covers many traditional path-based methods, and can be applied to both homogeneous graphs and
-              multi-relational graphs (e.g., knowledge graphs) in both transductive and inductive settings. Experiments
-              on both homogeneous graphs and knowledge graphs show that the proposed NBFNet outperforms existing methods
-              by a large margin in both transductive and inductive settings, achieving new state-of-the-art results.
-            </p>
+              <p class="paragraph">
+                <a class="slight-bold">Speaker:</a>
+                First author <a class="item-subtitle link-style-black"
+                                href="https://kiddozhu.github.io/"
+                                target="_blank">Zhaocheng Zhu</a>, who is a third-year Ph.D.
+                candidate at Mila - Quebec AI Institute, University of Montreal, advised by Prof. Jian Tang. He works on
+                graph representation learning, machine learning systems, and drug discovery.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract:</a>
+                Link prediction is a very fundamental task on graphs. Inspired by traditional path-based methods, in
+                this
+                paper we propose a general and flexible representation learning framework based on paths for link
+                prediction. Specifically, we define the representation of a pair of nodes as the generalized sum of all
+                path representations, with each path representation as the generalized product of the edge
+                representations
+                in the path. Motivated by the Bellman-Ford algorithm for solving the shortest path problem, we show that
+                the proposed path formulation can be efficiently solved by the generalized Bellman-Ford algorithm. To
+                further improve the capacity of the path formulation, we propose the Neural Bellman-Ford Network
+                (NBFNet),
+                a general graph neural network framework that solves the path formulation with learned operators in the
+                generalized Bellman-Ford algorithm. The NBFNet parameterizes the generalized Bellman-Ford algorithm with
+                3
+                neural components, namely INDICATOR, MESSAGE and AGGREGATE functions, which corresponds to the boundary
+                condition, multiplication operator, and summation operator respectively. The NBFNet is very general,
+                covers many traditional path-based methods, and can be applied to both homogeneous graphs and
+                multi-relational graphs (e.g., knowledge graphs) in both transductive and inductive settings.
+                Experiments
+                on both homogeneous graphs and knowledge graphs show that the proposed NBFNet outperforms existing
+                methods
+                by a large margin in both transductive and inductive settings, achieving new state-of-the-art results.
+              </p>
+            </div>
           </div>
 
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
